--- a/projects/index.html
+++ b/projects/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>Finally Mario</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css" />
 </head>
@@ -21,7 +21,7 @@
 
         <form name="baddies">
                 <div id='total'>
-                        <!-- <h2 id ='pTotal'></h2> -->
+                        <h2 id ='pTotal'></h2>
                         <button id="submit">Submit</button>
                     </div>
             <div id="images">
