--- a/projects/index.html
+++ b/projects/index.html
@@ -25,7 +25,7 @@
                         <button id="submit">Submit</button>
                     </div>
             <div id="images">
-                <div id="Goomba-image">
+                <div id="Goomba-image" class ='goomba'>
                     <h1>Goomba</h1>
                     <img src="Goomba.png" width="150px" height="150px">
                     <h2>5 Coins</h2>
