--- a/projects/list-todos/index.html
+++ b/projects/list-todos/index.html
@@ -46,6 +46,6 @@
     </div>
     </div>
     <script src = "https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.js"></script>
-    <script src= "main.js"></script>
+    <script src= "app.js"></script>
 </body>
 </html>
